--- a/Life on Mars/Life on Mars/Base.lproj/Main.storyboard
+++ b/Life on Mars/Life on Mars/Base.lproj/Main.storyboard
@@ -80,8 +80,8 @@
                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vC3-Va-7sq" userLabel="onboarding view">
-                                <rect key="frame" x="-0.5" y="0.0" width="375" height="667"/>
+                            <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="vC3-Va-7sq" userLabel="onboarding view">
+                                <rect key="frame" x="-1" y="0.0" width="376" height="667"/>
                                 <subviews>
                                     <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="space-sunrise" translatesAutoresizingMaskIntoConstraints="NO" id="5Px-za-14r">
                                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
@@ -92,8 +92,8 @@
                                         <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Welcome to Life on Mars!" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gHK-rH-En8">
-                                        <rect key="frame" x="56" y="-0.5" width="262.5" height="334"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Welcome to Life on Mars!" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gHK-rH-En8">
+                                        <rect key="frame" x="56" y="-1" width="263" height="335"/>
                                         <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="20"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <nil key="highlightedColor"/>
@@ -119,7 +119,7 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="I07-pb-tBn">
-                                        <rect key="frame" x="165.5" y="895" width="44" height="44"/>
+                                        <rect key="frame" x="166" y="895" width="44" height="44"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="44" id="nbS-3r-g1I"/>
                                             <constraint firstAttribute="height" constant="44" id="nkQ-iD-Ebc"/>
@@ -274,15 +274,15 @@
                                     <action selector="titleTapped:" destination="mMp-kA-hJQ" eventType="touchUpInside" id="qeZ-x8-IyY"/>
                                 </connections>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="25" baselineAdjustment="alignBaselines" minimumScaleFactor="1" translatesAutoresizingMaskIntoConstraints="NO" id="f0i-gx-Y2D" userLabel="easterEggDescription Label">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="30" baselineAdjustment="alignBaselines" minimumFontSize="12" translatesAutoresizingMaskIntoConstraints="NO" id="f0i-gx-Y2D" userLabel="easterEggDescription Label">
                                 <rect key="frame" x="19" y="667" width="337" height="501"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="16"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" alpha="0.0" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="25" baselineAdjustment="alignBaselines" minimumScaleFactor="1" translatesAutoresizingMaskIntoConstraints="NO" id="6Az-Iz-PsZ" userLabel="Description Label">
-                                <rect key="frame" x="47" y="83" width="281" height="501"/>
+                            <label opaque="NO" userInteractionEnabled="NO" alpha="0.0" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="30" baselineAdjustment="alignBaselines" minimumFontSize="12" translatesAutoresizingMaskIntoConstraints="NO" id="6Az-Iz-PsZ" userLabel="Description Label">
+                                <rect key="frame" x="38" y="83" width="300" height="501"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="16"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -377,7 +377,7 @@
                             <constraint firstItem="ayd-fl-YeR" firstAttribute="centerX" secondItem="kmw-ve-JYc" secondAttribute="centerX" id="kp9-3L-sgM"/>
                             <constraint firstItem="ayd-fl-YeR" firstAttribute="width" secondItem="kmw-ve-JYc" secondAttribute="width" id="mko-bf-ZfA"/>
                             <constraint firstItem="Pcf-Bq-aS4" firstAttribute="width" secondItem="kmw-ve-JYc" secondAttribute="width" constant="-108" id="nz6-2U-xf2"/>
-                            <constraint firstItem="6Az-Iz-PsZ" firstAttribute="width" secondItem="kmw-ve-JYc" secondAttribute="width" multiplier="0.75" id="ows-1r-LJP"/>
+                            <constraint firstItem="6Az-Iz-PsZ" firstAttribute="width" secondItem="kmw-ve-JYc" secondAttribute="width" multiplier="0.8" id="ows-1r-LJP"/>
                             <constraint firstItem="6Az-Iz-PsZ" firstAttribute="centerY" secondItem="kmw-ve-JYc" secondAttribute="centerY" id="pdY-Is-zss"/>
                             <constraint firstItem="6Az-Iz-PsZ" firstAttribute="height" secondItem="kmw-ve-JYc" secondAttribute="height" multiplier="0.75" id="rdj-xm-Cho"/>
                             <constraint firstItem="f0i-gx-Y2D" firstAttribute="height" secondItem="kmw-ve-JYc" secondAttribute="height" multiplier="0.75" id="siZ-GI-LLQ"/>
